--- a/index.html
+++ b/index.html
@@ -33,20 +33,20 @@
         </header>
 
         <!--hero/jumbotron-->
-        <section>
-            <div>
+        <section class="hero">
+            <div class="hero-form">
                 <h3>Get Started Today</h3>
-                <p>Fill out this form and one of our trainers will schedule a consult</p>
+                <p>Fill out this form and one of our trainers will schedule a consult.</p>
                 <!--Add form element-->
                 <form>
-                    <label for="name">Enter full name:</label>
-                    <input type="text" placeholder="Your Name" name="name" id="name" />
+                    <label for="name">Enter full name:</label><br/>
+                    <input type="text" placeholder="Your Name" name="name" id="name" /><br/>
 
-                    <label for="email">Enter email address:</label>
-                    <input type="email" placeholder="Your Email" name="email" id="email" />
+                    <label for="email">Enter email address:</label><br/>
+                    <input type="email" placeholder="Your Email" name="email" id="email" /><br/>
 
-                    <label for ="phone">Enter a telephone number:</label>
-                    <input type="tel" placeholder="Your Phone Number" name="phone" id="phone" />
+                    <label for ="phone">Enter a telephone number:</label><br/>
+                    <input type="tel" placeholder="Your Phone Number" name="phone" id="phone" /><br/>
 
                     <p>
                         Have you worked out with a trainer before?
