--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
                 <!--Add form element-->
                 <form>
                     <label for="name">Enter full name:</label><br/>
-                    <input type="text" placeholder="Your Name" name="name" id="name" /><br/>
+                    <input type="text" placeholder="Your Name" name="name" id="name" class="form-input" />
 
                     <label for="email">Enter email address:</label><br/>
-                    <input type="email" placeholder="Your Email" name="email" id="email" /><br/>
+                    <input type="email" placeholder="Your Email" name="email" id="email" class="form-input"/>
 
                     <label for ="phone">Enter a telephone number:</label><br/>
-                    <input type="tel" placeholder="Your Phone Number" name="phone" id="phone" /><br/>
+                    <input type="tel" placeholder="Your Phone Number" name="phone" id="phone" class="form-input"/>
 
                     <p>
                         Have you worked out with a trainer before?
