--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
         </section>
 
         <!--"what we do" section-->
-        <section id="what-we-do">
+        <section id="what-we-do" class="intro">
             <h2>What We Do</h2>
             <p>
-                butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOX
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor fugiat impedit ratione quia doloribus possimus nihil animi minima, ad, atque ducimus neque non nulla iste consectetur commodi reprehenderit a ab.
             </p>
 
         </section>
@@ -80,21 +80,25 @@
             <h2>What You Do</h2>
 
             <div>
+                <img src="./assets/images/step-1.svg" alt="" />
                 <h3>Step 1: Fill Out the Form Above.</h3>
                 <p>You're already here, so why not?</p>
             </div>
 
             <div>
+                <img src="./assets/images/step-2.svg" alt="" />
                 <h3>Step 2: Consult wiht One of Our Trainers.</h3>
                 <p>Are you here to build muscle, lose weight, or just feel good?</p>
             </div>
 
             <div>
+                <img src="./assets/images/step-3.svg" alt="" />
                 <h3>Step 3: Get Running.</h3>
                 <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
             </div>
 
             <div>
+                <img src="./assets/images/step-4.svg" alt="" />
                 <h3>Step : See Results.</h3>
                 <p>Bi-weekly checkins wiht your trainer will keep you focused.</p>
             </div>
