--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <h2 class="section-title primary-border">Meet the Trainers</h2>
             <article class="trainer">
                 <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
-                <div class="trainer-bio">
+                <div class="trainer-bio text-left">
                     <h3>Arron Stephens</h3>
                     <h4>Speed / Strength</h4>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, alias laboriosam corrupti est aliquid quasi beatae dolores quaerat recusandae repellat minima vel? Obcaecati aspernatur accusamus repellat, ut odio nostrum eligendi?</p>
@@ -117,8 +117,8 @@
             </article>
 
             <article class="trainer">
-                <img src="" alt="" />
-                <div class="trainer-bio">
+                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill in her work out clothes, ready to work out." />
+                <div class="trainer-bio text-right">
                     <h3>Joanna Gill</h3>
                     <h4>Endurance</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam, nulla. Debitis, sit voluptatem! Qui iste dolore quod labore eaque optio quibusdam? Cupiditate incidunt accusantium sed corporis voluptas? Impedit, facilis sint.</p>
@@ -126,8 +126,8 @@
             </article>
             
             <article class="trainer">
-                <img src="" alt="" />
-                <div class="trainer-bio">
+                <img src="./assets/images/trainer-3.jpg" alt="Harry Smith working out with dumbells in his workout clothes and headband." />
+                <div class="trainer-bio text-left">
                     <h3>Harry "The Headband" Smith</h3>
                     <h4>Strength</h4>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur temporibus libero, quis nisi tempore dignissimos reiciendis, quos adipisci, asperiores sit earum iusto dolores commodi nobis animi sequi porro molestiae. Earum.</p>
