finalize styling for trainers section

--- a/index.html
+++ b/index.html
@@ -117,16 +117,16 @@
             </article>
 
             <article class="trainer">
-                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill in her work out clothes, ready to work out." />
                 <div class="trainer-bio text-right">
                     <h3>Joanna Gill</h3>
                     <h4>Endurance</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam, nulla. Debitis, sit voluptatem! Qui iste dolore quod labore eaque optio quibusdam? Cupiditate incidunt accusantium sed corporis voluptas? Impedit, facilis sint.</p>
                 </div>
+                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout." />
             </article>
             
             <article class="trainer">
-                <img src="./assets/images/trainer-3.jpg" alt="Harry Smith working out with dumbells in his workout clothes and headband." />
+                <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights." />
                 <div class="trainer-bio text-left">
                     <h3>Harry "The Headband" Smith</h3>
                     <h4>Strength</h4>
