--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
         </section>
 
         <!--"reach out" section-->
-        <section>
-            <h2>Reach Out</h2>
+        <section id="reach-out" class="contact">
+            <h2 class="section-title secondary-border">Reach Out</h2>
             <div class="contact-info">
                 <iframe 
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3579.3757848185464!2d-98.25578368446!3d26.216976696003407!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8665a71005203995%3A0xc55ee64c6eac986f!2s3201%20Pecan%20Blvd%2C%20McAllen%2C%20TX%2078501!5e0!3m2!1sen!2sus!4v1596412280779!5m2!1sen!2sus" 
