--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
 
         <!--hero/jumbotron-->
         <section class="hero">
+            <div class="hero-cta">
+                <h2>Start Building Habits</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio ducimus rerum possimus inventore veritatis eos? Consectetur, debitis consequuntur magnam, odit non quam rerum, voluptatum vel illo error libero molestias reprehenderit!
+                </p>
+            </div>
             <div class="hero-form">
                 <h3>Get Started Today</h3>
                 <p>Fill out this form and one of our trainers will schedule a consult.</p>
