--- a/index.html
+++ b/index.html
@@ -73,17 +73,21 @@
 
         <!--"what we do" section-->
         <section id="what-we-do" class="intro">
-            <h2 class="section-title primary-border">What We Do</h2>
-            <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor fugiat impedit ratione quia doloribus possimus nihil animi minima, ad, atque ducimus neque non nulla iste consectetur commodi reprehenderit a ab.
-            </p>
-
+            <div class="flex-row">
+                <h2 class="section-title primary-border">What We Do</h2>
+            </div>
+            <div class="flex-row">
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor fugiat impedit ratione quia doloribus possimus nihil animi minima, ad, atque ducimus neque non nulla iste consectetur commodi reprehenderit a ab.
+                </p>
+            </div>
         </section>
 
         <!--"what you do" section-->
         <section id="what-you-do" class="steps">
-            <h2 class="section-title secondary-border">What You Do</h2>
-
+            <div class="flex-row">
+                <h2 class="section-title secondary-border">What You Do</h2>
+            </div>
             <div>
                 <img src="./assets/images/step-1.svg" alt="" />
                 <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
@@ -111,7 +115,9 @@
 
         <!--"meet the trainers" section-->
         <section id="your-trainers" class="trainers">
-            <h2 class="section-title primary-border">Meet the Trainers</h2>
+            <div class="flex-row">
+                <h2 class="section-title primary-border">Meet the Trainers</h2>
+            </div>
             <article class="trainer">
                 <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
                 <div class="trainer-bio text-left">
@@ -143,7 +149,9 @@
 
         <!--"reach out" section-->
         <section id="reach-out" class="contact">
-            <h2 class="section-title secondary-border">Reach Out</h2>
+            <div class="flex-row">
+                <h2 class="section-title secondary-border">Reach Out</h2>
+            </div>
             <div class="contact-info">
                 <iframe 
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3579.3757848185464!2d-98.25578368446!3d26.216976696003407!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8665a71005203995%3A0xc55ee64c6eac986f!2s3201%20Pecan%20Blvd%2C%20McAllen%2C%20TX%2078501!5e0!3m2!1sen!2sus!4v1596412280779!5m2!1sen!2sus" 
