--- a/index.html
+++ b/index.html
@@ -158,28 +158,43 @@
             </div>
             <div class="trainers">
                 <article class="trainer">
-                    <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                    <div class="trainer-img trainer-1">
+                        <div>
+                            <h3>Arron Stephens</h3>
+                            <h4>Speed / Strength</h4>
+                        </div>
+                    </div>
                     <div class="trainer-bio">
-                        <h3 class="trainer-name">Arron Stephens</h3>
-                        <h4 class="trainer-role">Speed / Strength</h4>
+                        <h3>Arron Stephens</h3>
+                        <h4>Speed / Strength</h4>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, alias laboriosam corrupti est aliquid quasi beatae dolores quaerat recusandae repellat minima vel? Obcaecati aspernatur accusamus repellat, ut odio nostrum eligendi?</p>
                     </div>
                 </article>
 
                 <article class="trainer">
-                    <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout." />
+                    <div class="trainer-img trainer-2">
+                        <div>
+                            <h3>Joanna Gill</h3>
+                            <h4>Endurance</h4>
+                        </div>
+                    </div>
                     <div class="trainer-bio">
-                        <h3 class="trainer-name">Joanna Gill</h3>
-                        <h4 class="trainer-role">Endurance</h4>
+                        <h3>Joanna Gill</h3>
+                        <h4>Endurance</h4>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam, nulla. Debitis, sit voluptatem! Qui iste dolore quod labore eaque optio quibusdam? Cupiditate incidunt accusantium sed corporis voluptas? Impedit, facilis sint.</p>
                     </div>
                 </article>
             
                 <article class="trainer">
-                    <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights." />
+                    <div class="trainer-img trainer-3">
+                        <div>
+                            <h3>Harry "The Headband" Smith</h3>
+                            <h4>Strength</h4>
+                        </div>
+                    </div>
                     <div class="trainer-bio">
-                        <h3 class="trainer-name">Harry "The Headband" Smith</h3>
-                        <h4 class="trainer-role">Strength</h4>
+                        <h3>Harry "The Headband" Smith</h3>
+                        <h4>Strength</h4>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur temporibus libero, quis nisi tempore dignissimos reiciendis, quos adipisci, asperiores sit earum iusto dolores commodi nobis animi sequi porro molestiae. Earum.</p>
                     </div>
                 </article>
